Basic chronicle queue market data listener and micro-service